changes uploaded on 19-04-2018
Index & Grid layout pages updated

--- a/masonry.html
+++ b/masonry.html
@@ -2,73 +2,14 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="Nishant Dogra is an IT Expert and Entrepreneur, have worked on number of projects including big brands Yummie Nation, Foodie Blogroll, Anspeil.Bar, GASIDO. Have 100&#39;s of Codepen Plugins and Tech-Blog released. Love to Front-end Coding and Blogging #DograsWeblog">
+	<meta name="description" content="">
+	<meta name="author" content="Nishant dogra // Twitter: https://twitter.com/mrdogra007">
 	<link href="img/favicons/favicon-32x32.png" rel="icon" type="mage/x-icon"/>
 	<title>Dogra&#39;s Weblog</title>
 	<!-- Bootstrap core CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 	<!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/media.css" rel="stylesheet">
-	
-	<meta content='SINDO, Dogras Weblog, FactsPediaIn, Hindustan360, DandvatPranam, YesPahari, CrowdFundingGlobe, BeingDogra, @mrdogra007' name='keywords'/>
-	<meta content='https://mrdogra007.blogspot.in/' property='og:url'/>
-	<meta content='Nishant Dogra, UI/UX Designer and Design Advisor' property='og:title'/>
-	<meta content='Nishant Dogra is an IT Expert and Entrepreneur, have worked on number of projects including big brands Yummie Nation, Foodie Blogroll, Anspeil.Bar, GASIDO. Have 100&#39;s of Codepen Plugins and Tech-Blog released. Love to Front-end Coding and Blogging #DograsWeblog' property='og:description'/>
-	<meta content='Dogras Weblog' property='og:site_name'/>
-	<meta content='https://pbs.twimg.com/media/DSyOXiaU8AEINkY.jpg' property='og:image'/>
-	<meta content='en_US' property='og:locale'/>
-
-	<meta content='@mrdogra007' name='twitter:site'/>
-	<meta content='https://pbs.twimg.com/media/DSyOXiaU8AEINkY.jpg' name='twitter:image'/>
-	<meta content='summary_large_image' name='twitter:card'/>
-	<meta content='@mrdogra007' name='twitter:creator'/>
-
-	<meta name="author" content="Nishant Dogra">
-	<meta name="theme-color" content="#2c1658">
-	<meta name="mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-capable" content="yes"/>
-	
-	<link rel="icon" href="img/logo-icons/32.png" sizes="32x32" />
-	<link rel="icon" href="img/logo-icons/192.png" sizes="192x192" />
-	<link rel="apple-touch-icon-precomposed" href="img/logo-icons/512.png?fit=180%2C180" />
-	<meta name="msapplication-TileImage" content="img/logo-icons/512.png?fit=270%2C270" />
-
-	<script type='application/ld+json'>
-		{
-			"@context": "http://schema.org",
-			"@type": "Person",
-			"name": "Nishant Dogra",
-			"url": "https://mrdogra007.blogspot.in/",
-			"sameAs" : [
-			"https://twitter.com/mrdogra007",
-			"https://plus.google.com/+NishantDogra7",
-			"https://www.behance.net/mrdogra007",
-			"http://codepen.io/mrdogra007",
-			"https://github.com/mrdogra007",
-			"https://angel.co/mr-dogra-007",
-			"http://linkedin.com/in/mrdogra007"
-		] }
-	</script>
-
-	<script type='application/ld+json'>
-		{
-			"@context": "http://schema.org",
-			"@type": "Person",
-			"name": "Nishant Dogra",
-			"url": "https://mrdogra007.blogspot.in/",
-			"logo": "https://lh3.googleusercontent.com/-QVNN1wuO5aA/AAAAAAAAAAI/AAAAAAAACTY/fnHaRDXX5rY/s120-c-pf/photo.jpg",
-			"image": "https://pbs.twimg.com/media/DSyOXiaU8AEINkY.jpg",
-			"description": "Nishant Dogra is an IT Expert and Entrepreneur, have worked on number of projects including big brands Yummie Nation, Foodie Blogroll, Anspeil.Bar, GASIDO. Have 100's of Codepen Plugins and Tech-Blog released. Love to Front-end Coding and Blogging #DograsWeblog",
-			"address": {
-				"@type": "PostalAddress",
-				"addressLocality": "Chandigarh",
-				"addressRegion": "ON",
-				"streetAddress": "Chandigarh",
-				"postalCode": "160017"
-			}
-		}
-	</script>
 </head>
 
 <body>
@@ -104,11 +45,6 @@
 			</div>
 		</div>
 	</header>
-	
-	<section class="header-canvas">
-		<h1>Masonry Grid</h1>
-		<h2>A Theme by: Nishant Dogra</h2>
-	</section>
 
 	<div class="container masonrygrid">
 		<div class="row">
